# nyc-complaints-pipeline

./: .gitignore  README.md
airflow/: .env.example  docker-compose.yaml  pyproject.toml
airflow/dags/: dbt_dag.py  ingestion_dag.py  spark_transform_dag.py
dbt/: Dockerfile  pyproject.toml
dbt/nyc_complaints/: dbt_project.yml  profiles.yml
dbt/nyc_complaints/models/mart/: fct_agency_efficiency.sql  fct_complaint_hotspots.sql  fct_income_resolution.sql
dbt/nyc_complaints/models/raw/: sources.yml
dbt/nyc_complaints/models/staging/: stg_complaints.sql  stg_median_income.sql  stg_nyc.yml
dbt/nyc_complaints/snapshots/: complaints_snapshots.yml
dbt/nyc_complaints/tests/: positive_median_income_test.sql
ingestion/: .env.example  Dockerfile  main.py  pyproject.toml
spark-tranformation/: pyproject.toml  transforms.py
terraform/: apis.tf  iam.tf  main.tf  terraform.tfvars.example  variables.tf
